[project]
name = "langchain-rag-examples"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "langchain==0.3.26",
    "langchain-ollama",
    "langchain-chroma",
    "pandas",
    "dotenv"
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-mock>=3.10",
    "pytest-cov>=4.0"
]

[project.scripts]
rag-examples = "rag_examples.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
pythonpath = ["src"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
    "--cov=rag_examples",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-fail-under=80"
]
markers = [
    "unit: marks tests as unit tests",
    "integration: marks tests as integration tests",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')"
]
